# chatBot_motive

./: .gitignore  app.py  conversation.md  extract_from_aws.py  ingest.py  prompts.py  pyproject.toml
utils/: parser.py
